NetBSD Problem Report #50693

From www@NetBSD.org  Fri Jan 22 17:11:00 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 018857AC9F
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 22 Jan 2016 17:11:00 +0000 (UTC)
Message-Id: <20160122171059.296D67ACB3@mollari.NetBSD.org>
Date: Fri, 22 Jan 2016 17:10:59 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/dev/pci/if_ale.c:544: possible bad bitmask ?
X-Send-Pr-Version: www-1.0

>Number:         50693
>Category:       kern
>Synopsis:       src/sys/dev/pci/if_ale.c:544: possible bad bitmask ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Jan 22 17:15:00 +0000 2016
>Closed-Date:    Tue Jan 26 16:08:57 +0000 2016
>Last-Modified:  Tue Jan 26 16:08:57 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160121
>Organization:
>Environment:
>Description:
[src/sys/dev/pci/if_ale.c:544] -> [src/sys/dev/pci/if_ale.c:543]: (style) Same expression on both sides of '|'.


Source code is

     ifp->if_capabilities |= IFCAP_CSUM_IPv4_Tx | IFCAP_CSUM_IPv4_Rx |
                IFCAP_CSUM_TCPv4_Tx | IFCAP_CSUM_TCPv4_Rx |
                IFCAP_CSUM_UDPv4_Tx | IFCAP_CSUM_TCPv4_Rx;

Suggest new code

     ifp->if_capabilities |= IFCAP_CSUM_IPv4_Tx | IFCAP_CSUM_IPv4_Rx |
                IFCAP_CSUM_TCPv4_Tx | IFCAP_CSUM_TCPv4_Rx |
                IFCAP_CSUM_UDPv4_Tx | IFCAP_CSUM_UDPv4_Rx;

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50693 CVS commit: src/sys/dev/pci
Date: Tue, 26 Jan 2016 11:01:45 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Tue Jan 26 16:01:45 UTC 2016

 Modified Files:
 	src/sys/dev/pci: if_ale.c

 Log Message:
 PR/50693: David Binderman: Fix constant pasto.


 To generate a diff of this commit:
 cvs rdiff -u -r1.18 -r1.19 src/sys/dev/pci/if_ale.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Tue, 26 Jan 2016 16:08:57 +0000
State-Changed-Why:
Christos fixed it, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.