PR/50693: David Binderman: Fix constant pasto.